Completata registrazione utente

--- a/server/test.html
+++ b/server/test.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<form action="https://league-of-legends-coaching.herokuapp.com/userRegistration" method="post" name="myform" id="myform">
-  <input name="username" value="username" />
+  <input name="name" value="username" />
   <input name="password" value="password" />
   <button type="button" onclick="send()">Send JSON</button>
 </form>
